--- a/index.css
+++ b/index.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-body {
+body,
+html {
     padding: 0;
     margin: 0;
-    height: 100vh;
     font-family: Roboto;
+}
+
+.container{
+    width: 100%;
 }
 
 ul,
@@ -30,6 +34,7 @@ h1 {
 
 .label {
     color: #9F9F9F;
+    flex: 1;
 }
 
 .nav-list {
@@ -140,6 +145,8 @@ h1 {
 }
 
 .bottom-container {
+    display: flex;
+    flex-direction: column;
     border: 1px solid #E5E5E5;
     border-radius: 3px;
     padding: 10px;
@@ -156,9 +163,86 @@ h1 {
     text-align: left;
 }
 
+
+.burger-menu{
+    display: none;
+    cursor: pointer;
+}
+
+
+.burger-menu img{
+    width: 90px;
+    height: 24px;
+}
+
+
 .connection-status {
     font-size: 50px;
     display: none;
     justify-content: center;
     color: red;
+}
+
+@media (max-width: 768px) {
+    .exchange-container {
+        flex-direction: column;
+    }
+
+    .mid-section{
+        display: none;
+    }
+
+
+    .header{
+        gap: 5px;
+
+    }
+
+    .burger-menu{
+        display: flex;
+    }
+
+    .nav-btn{
+        margin-left: 10px;
+    }
+
+    .nav-list{
+        flex-direction: column;
+    }
+}
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    top: 60px; 
+    left: 0;
+    right: 0;
+    background-color: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    padding: 10px;
+}
+
+.dropdown-menu.active {
+    display: block;
+}
+
+.dropdown-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.dropdown-item {
+    padding: 10px 15px;
+    cursor: pointer;
+    border-bottom: 1px solid #ddd;
+}
+
+.dropdown-item:last-child {
+    border-bottom: none;
+}
+
+.dropdown-item:hover {
+    background-color: #f5f5f5;
 }
