--- a/index.css
+++ b/index.css
@@ -32,6 +32,12 @@ h1 {
     justify-content: space-around;
 }
 
+.mid-section{
+    width: 100%;
+    max-width: 700px;
+}
+
+
 .label {
     color: #9F9F9F;
     flex: 1;
@@ -39,13 +45,13 @@ h1 {
 
 .nav-list {
     display: flex;
-    gap: 30px;
     justify-content: space-between;
     color: gray;
 }
 
 .nav-item {
     flex-grow: 1;
+    font-size: 11px;
     font-weight: 500;
     text-align: center;
     color: #959BA4;
@@ -183,40 +189,12 @@ h1 {
     color: red;
 }
 
-@media (max-width: 768px) {
-    .exchange-container {
-        flex-direction: column;
-    }
-
-    .mid-section{
-        display: none;
-    }
-
-
-    .header{
-        gap: 5px;
-
-    }
-
-    .burger-menu{
-        display: flex;
-    }
-
-    .nav-btn{
-        margin-left: 10px;
-    }
-
-    .nav-list{
-        flex-direction: column;
-    }
-}
-
 .dropdown-menu {
     display: none;
     position: absolute;
-    top: 60px; 
-    left: 0;
-    right: 0;
+    top: 60px;
+    left: auto; 
+    right: 0; 
     background-color: #fff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 1000;
@@ -245,4 +223,37 @@ h1 {
 
 .dropdown-item:hover {
     background-color: #f5f5f5;
+}
+
+
+@media (max-width: 830px) {
+    .exchange-container {
+        flex-direction: column;
+    }
+
+    .mid-section{
+        display: none;
+    }
+
+
+    .header{
+        gap: 5px;
+    }
+
+    .burger-menu{
+        display: flex;
+    }
+
+    .currency{
+        font-size: 12px;
+    }
+
+
+    .nav-btn{
+        margin-left: 10px;
+    }
+
+    .nav-list{
+        flex-direction: column;
+    }
 }
